fix(Wiki Street Fighter): remover :first-child desnecessario

--- a/modulo-03/wikisf/css/style.css
+++ b/modulo-03/wikisf/css/style.css
@@ -27,7 +27,7 @@ body{
     height: 63px;
     padding-top: 15px;
 }
-.cabecalho h2:first-child{
+.cabecalho h2{
     color: #ffffff;
     margin: 10px 0 0 10px;
 }
