feat(Portal Street Fighter): criar "ficha técnica" e "sobre mim" com M.V.C.
TO-DO: Corrigir imagem da view "sobre mim"

--- a/modulo-05/StreetFighter.Web/StreetFighter.Web/Content/style.css
+++ b/modulo-05/StreetFighter.Web/StreetFighter.Web/Content/style.css
@@ -47,8 +47,8 @@ body{
     float: left;
 }
 .blanka div:first-child{
-    background-image: url('Images/blanka.png');
+    background-image: url('~/Content/Images/blanka.png');
 }
 .perfil div:first-child{
-    background-image: url('Images/adon.png');
+    background-image: url('~/Content/Images/adon.png');
 }
