--- a/modulo-05/StreetFighter.Web/StreetFighter.Web/Views/Shared/_Layout.cshtml
+++ b/modulo-05/StreetFighter.Web/StreetFighter.Web/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
     Layout = null;
 }
 
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -19,7 +20,7 @@
             <a href="https://www.google.com.br/webhp?sourceid=chrome-instant&rlz=1C1CHZL_pt-BRBR712BR712&ion=1&espv=2&ie=UTF-8#q=street+fighter&tbm=nws">
                 Notícias
             </a>
-            <a href="ficha-tecnica.html">
+            <a href="~/StreetFighter/FichaTecnica">
                 Ficha Técnica
             </a>
             <a href="sobre.html">
