fix(Sobre Mim/Street Fighter): corrigir ancora que faz referência à tela.

--- a/modulo-05/StreetFighter.Web/StreetFighter.Web/Views/Shared/_Layout.cshtml
+++ b/modulo-05/StreetFighter.Web/StreetFighter.Web/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
             <a href="~/StreetFighter/FichaTecnica">
                 Ficha Técnica
             </a>
-            <a href="sobre.html">
+            <a href="~/StreetFighter/SobreMim">
                 Sobre
             </a>
         </div>
