feat(Cadastro de personagem): cadastrar personagens com validações dos dados no portal StreetFighter

--- a/modulo-05/StreetFighter.Web/StreetFighter.Web/Views/Shared/_Layout.cshtml
+++ b/modulo-05/StreetFighter.Web/StreetFighter.Web/Views/Shared/_Layout.cshtml
@@ -9,7 +9,8 @@
 <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="~/Content/style.css" />
+    <link href="~/Content/style.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
 </head>
 <body>
     <div class="principal">
@@ -17,8 +18,8 @@
             <a href="~/StreetFighter">
                 Início
             </a>
-            <a href="https://www.google.com.br/webhp?sourceid=chrome-instant&rlz=1C1CHZL_pt-BRBR712BR712&ion=1&espv=2&ie=UTF-8#q=street+fighter&tbm=nws">
-                Notícias
+            <a href="~/StreetFighter/Cadastro">
+                Cadastro
             </a>
             <a href="~/StreetFighter/FichaTecnica">
                 Ficha Técnica
