--- a/modulo-05/StreetFighter.Web/StreetFighter.Web/Views/StreetFighter/SobreMim.cshtml
+++ b/modulo-05/StreetFighter.Web/StreetFighter.Web/Views/StreetFighter/SobreMim.cshtml
@@ -6,7 +6,7 @@
 <div class="informacoes">
     <h1>@Model.Nome</h1>
     <div class="perfil">
-        <div class="img-descricao"></div>
+        <div class="img-descricao" style="background-image: url('@Model.Imagem');"></div>
         <div class="dados">
             <p>
                 <strong>
