--- a/modulo-05/StreetFighter.Web/StreetFighter.Web/Content/style.css
+++ b/modulo-05/StreetFighter.Web/StreetFighter.Web/Content/style.css
@@ -11,16 +11,17 @@ body{
     background-color: rgba(132, 132, 132, 0.5);
     margin: 250px auto 61px;
     border: 1px solid #C0C0C0;
-    width: 502px;
+    width: 450px;
     height: 35px;
     border-radius: 10px;
-    padding-top: 20px;
+    padding: 10px 0 20px 0;
 }
 .menu > a{
     color: #ffffff;
     text-decoration: none;
     font-weight: bold;
     margin-left: 37px;
+    margin-bottom: 30px;
 }
 .cabecalho{
     background-color: #444444;
@@ -33,9 +34,9 @@ body{
 }
 .informacoes{
     height: auto;
-    width: 672px;
+    width: 702px;
     background-color: #EDEDED;
-    padding: 1px 15px 0;
+    padding: 10px 15px;
     overflow: auto;
 }
 .dados > p{
@@ -45,10 +46,10 @@ body{
     height: 480px;
     width: 259px;
     float: left;
+    border: none;
 }
-.blanka div:first-child{
-    background-image: url('~/Content/Images/blanka.png');
-}
-.perfil div:first-child{
-    background-image: url('~/Content/Images/adon.png');
+.cadastro{
+    width: 702px;
+    background-color: #EDEDED;
+    padding: 10px 15px;
 }
