--- a/modulo-05/StreetFighter.Web/StreetFighter.Web/Views/Shared/_Layout.cshtml
+++ b/modulo-05/StreetFighter.Web/StreetFighter.Web/Views/Shared/_Layout.cshtml
@@ -18,11 +18,8 @@
             <a href="~/StreetFighter">
                 Início
             </a>
-            <a href="~/StreetFighter/Cadastro">
-                Cadastro
-            </a>
-            <a href="~/StreetFighter/FichaTecnica">
-                Ficha Técnica
+            <a href="~/StreetFighter/ListaPersonagens">
+                Lista de Personagens
             </a>
             <a href="~/StreetFighter/SobreMim">
                 Sobre
