feat(Cadastro/Atualização/Exclusão de produto): CÓDIGO INCOMPLETO

--- a/modulo-05/Loja/Loja.Web/Views/Home/Index.cshtml
+++ b/modulo-05/Loja/Loja.Web/Views/Home/Index.cshtml
@@ -16,6 +16,8 @@
                 <p>
                     Valor: R$ @produto.Valor
                 </p>
+                <a class="glyphicon glyphicon-pencil" href="~/Home/Manter/@produto.Id"></a>
+                <a class="glyphicon glyphicon-pencil" href="~/Home/Remover/@produto.Id"></a>
             </div>
         }
     }
