--- a/modulo-05/Loja/Loja.Web/Views/Home/About.cshtml
+++ b/modulo-05/Loja/Loja.Web/Views/Home/About.cshtml
@@ -1,7 +1,33 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Manter";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Message.</h2>
 
-<p>Use this area to provide additional information.</p>
+@using (Html.BeginForm("", "StreetFighter", FormMethod.Post, new { @class = "form-horizontal" }))
+{
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+    @Html.HiddenFor(model => model.Id)
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Nome, new { @class = "col-sm-2 control-label" })
+        <div class="col-sm-10">
+            @Html.TextBoxFor(model => model.Nome, new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.Nome)
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Valor, new { @class = "col-sm-2 control-label" })
+        <div class="col-sm-10">
+            @Html.TextBoxFor(model => model.Valor, new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.Valor)
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-default">Salvar</button>
+        </div>
+    </div>
+}
