feat(Campos Cadastro/Edição): CÓDIGO INCOMPLETO

--- a/modulo-undifined-rec.net/LojaDeItens/LojaDeItens.Web/Views/ItemMagico/Editar.cshtml
+++ b/modulo-undifined-rec.net/LojaDeItens/LojaDeItens.Web/Views/ItemMagico/Editar.cshtml
@@ -16,9 +16,33 @@
         @Html.AntiForgeryToken()
         @Html.ValidationSummary()
 
-        @Html.LabelFor(m => m.Nome)
-        @Html.TextBoxFor(m => m.Nome)
+        <div class="form-group">
+            @Html.LabelFor(m => m.Nome, new { @class = "col-sm-2 control-label" })
+            @Html.TextBoxFor(m => m.Nome, new { @class = "form-control" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Descricao, new { @class = "col-sm-2 control-label" })
+            @Html.TextBoxFor(m => m.Descricao, new { @class = "form-control" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Preco, new { @class = "col-sm-2 control-label" })
+            @Html.EditorFor(m => m.Preco, new { type = "number", @class = "form-control" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Estoque, new { @class = "col-sm-2 control-label" })
+            @Html.EditorFor(m => m.Estoque, new { type = "number", @min = 0, @class = "form-control" })
+        </div>
+        
+            var ehRaro = new List<SelectListItem>();
+            ehRaro.Add(new SelectListItem{ Text = "Sim", Value = "true" });
+            ehRaro.Add(new SelectListItem{ Text = "Não", Value = "false"});
+        
+        <div class="form-group">
+            @Html.LabelFor(m => m.Raro, new { @class = "col-sm-2 control-label" })
+            @Html.DropDownListFor(m => m.Raro, ehRaro, "Defina se é raro!")
+        </div>
 
-        <button type="submit">Salvar</button>
+            
+        <button type="submit"> Salvar </button>
     }
 </div>
